# pbart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: wrapper_ccache.sh.in  wrapper_default.sh.in
cpp/include/pbart/: Codec.h  CommonException.h  Dico.h  DicoXMLReader.h  Exception.h  Export.h  Iterator.h  Message.h  Serializer.h  Types.h  Variant.h
cpp/src/jni/: cpp-java-conversion-helpers.cpp  cpp-java-conversion-helpers.h  org_Lmap_pbart_Message.cpp  org_Lmap_pbart_Serializer.cpp
cpp/src/pbart/: Decode.cpp  DicoXMLReader.cpp  Encode.cpp  Exception.cpp  FirstInclude.h  Message.cpp  Serializer.cpp  Types.cpp  macros.h
cpp/unit-test/data/: dico-BadFieldId.xml  dico-BadItemTag.xml  dico-BadMessageType.xml  dico-BadMsgId.xml  dico-BadType.xml  dico-Big.proto  dico-Big.xml  dico-DuplicatedFieldId.xml  dico-DuplicatedFieldName.xml  dico-DuplicatedMsgId.xml  dico-DuplicatedMsgItem.xml  dico-DuplicatedMsgName.xml  dico-MissingFieldDefinition.xml  dico-MissingMessageDefinition.xml  dico-Perf.xml  dico-Repeated.xml  dico-SimpleGen.xml  dico-ValidButNothingDefined.xml  dico.xml  this-is-not-a-dico.xsd
cpp/unit-test/jni/: TestJNI.cpp
cpp/unit-test/pbart/: Main.cpp  TestDicoAsMsg.cpp  TestMessage.cpp  TestPerf.cpp
include/pbart/: Dico.h  Exception.h  Export.h  Iterator.h  Message.h
java/src/main/java/org/Lmap/pbart/: CodecException.java  DicoException.java  DmlException.java  DmlRuntimeException.java  Exception.java  IdException.java  Message.java  Serializer.java  Type.java  TypeException.java
java/src/test/java/org/Lmap/pbart/: TestPerf.java  TestSimple.java
src/main/cpp/jni/: cpp-java-conversion-helpers.cpp
src/main/cpp/pbart/: DicoXMLReader.cpp  Types.cpp
src/main/java/org/Lmap/pbart/: DicoException.java  Exception.java  IdException.java  Message.java  RuntimeException.java  Serializer.java  Type.java  TypeException.java
src/test/cpp/pbart/: Main.cpp  TestBig.cpp  TestCodec.cpp  TestCodecRepeated.cpp  TestDico.cpp  TestVariant.cpp
src/test/dico/: dico-BadItemTag.xml  dico-Big.xml  dico-Perf.xml  dico-Repeated.xml  this-is-not-a-dico.xsd
src/test/java/org/Lmap/pbart/: TestPerf.java  TestSimple.java
